# openlab-contiki

./: .directory  .gitignore  README-IoT-LAB.md  README_COMPILING  iotlab.makefile
appli/: CMakeLists.txt
appli/education/: CMakeLists.txt  README.md
appli/fiteco/: CMakeLists.txt
appli/iotlab/: CMakeLists.txt
appli/iotlab/autotest_common/: CMakeLists.txt  autotest_config.h  iotlab_autotest_cn.c  iotlab_autotest_cn.h  iotlab_autotest_on.c  iotlab_autotest_on.h
appli/iotlab/control_node/: CMakeLists.txt  README
appli/iotlab/control_node/control_node/: CMakeLists.txt  cn_autotest.c  cn_autotest.h  cn_consumption.c  cn_consumption.h  cn_control.c  cn_control.h  cn_i2c.c  cn_i2c.h  cn_logger.c  cn_logger.h  cn_radio.c  cn_radio.h  main.c
appli/iotlab/control_node/control_node/test_cn/: CMakeLists.txt  main.c
appli/iotlab/control_node/control_node_fabien_old/: CMakeLists.txt  constants.c  constants.h  control_node.c  control_node.h  global.h
appli/iotlab/control_node/control_node_fabien_old/Documentation/: Control_Node_specification.odt  Makefile  control_node.txt
appli/iotlab/control_node/control_node_fabien_old/Documentation/source/: cn_code_doc.rst  conf.py  index.rst
appli/iotlab/control_node/control_node_fabien_old/commands/: CMakeLists.txt  leds_cmds.c  leds_cmds.h  sensorCommand.c  sensorCommand.h
appli/iotlab/control_node/controlnode_clement/: CMakeLists.txt  iotlab-polling.c
appli/iotlab/control_node/controlnode_clement/test/: iotlab-serial-test.c  iotlab-serial.py
appli/iotlab/fiteco_test/: fiteco_gwt_test_power.c
appli/iotlab/idle_with_dc/: CMakeLists.txt  idle_with_dc.c
appli/iotlab/lib/: CMakeLists.txt  iotlab_leds_util.c  iotlab_leds_util.h  iotlab_serial.c  iotlab_serial.h  iotlab_time.c  iotlab_time.h  iotlab_uid_num_hashtable.c  iotlab_uid_num_hashtable.h  iotlab_uid_num_hashtable_fcts.c  zep_sniffer_format.c  zep_sniffer_format.h
appli/iotlab/lib/scripts/: generate_uid_dict.py
appli/iotlab/node_radio_characterization/: CMakeLists.txt  README.md  main.c
appli/iotlab/node_radio_characterization/run_characterization/: README.md  run_characterization.py  run_test.sh
appli/iotlab/open_node_m3_autotest/: CMakeLists.txt  main.c
appli/iotlab/periph/: CMakeLists.txt  iotlab_gpio.c  iotlab_gpio.h  iotlab_i2c.h  iotlab_i2c_slave.h  iotlab_leds.h
appli/iotlab/periph/iotlab_i2c/: i2c_slave_fsm.dot  iotlab_i2c.c  iotlab_i2c_.h  iotlab_i2c_slave.c
appli/iotlab_examples/: CMakeLists.txt
appli/iotlab_examples/gps_synced_sniffer/: CMakeLists.txt  README.md  TODO  gps_synced_clock.c  gps_synced_clock.h  main.c  serial2loopback.py  zep_sniffer.c
appli/iotlab_examples/nvram/: CMakeLists.txt  main.c
appli/iotlab_examples/ping_pong/: CMakeLists.txt  accelero.c  accelero.h  blinker.c  blinker.h  main.c  radio.c  radio.h
appli/iotlab_examples/print_uids/: CMakeLists.txt  print_uids.c
appli/iotlab_examples/robot_broadcaster/: CMakeLists.txt  radio.c  radio.h  robot_broadcaster.c  robot_broadcaster.py  robot_listener.c
appli/iotlab_examples/serial_echo/: CMakeLists.txt  serial_echo.c
appli/iotlab_examples/serial_helo/: CMakeLists.txt  main.c
appli/iotlab_examples/simple_idle/: CMakeLists.txt  simple_idle.c
appli/iotlab_examples/simple_robot/: CMakeLists.txt  README.md  live_imu.py  main.c  offline.sh  plot_imu.py  robot.txt
appli/iotlab_examples/smart_tiles/: CMakeLists.txt  README.md  detectpeak.c  detectpeak.h  detectpeak.py  main.c  plot_imu.py  plot_sensors.py  radio.h  radio_pinger.c  radio_recv.c  smart_tiles.c
appli/iotlab_examples/smart_tiles/data/: robot1.txt  top30.txt  walk.txt  walk1.txt  walk2.txt  walk3.txt  zero.txt
appli/iotlab_examples/tutorial/: CMakeLists.txt  README.md  main.c
appli/iotlab_tests/: CMakeLists.txt
appli/iotlab_tests/distributed_computing/: .gitignore  CMakeLists.txt  computing.c  config.h  management_script.py
appli/iotlab_tests/foren6_sniffer/: CMakeLists.txt  foren6_sniffer.c  main.c
appli/iotlab_tests/m3_node_idle/: CMakLists.txt  m3_open_node_low_power.c
appli/iotlab_tests/m3_node_interract_cn/: CMakeLists.txt  main.c
appli/iotlab_tests/oml/: CMakeLists.txt  test_oml.c
appli/iotlab_tests/test_control_node_absolute_time/: CMakeLists.txt  test_time.c  time.c  time.h
appli/iotlab_tests/test_echo_to_server/: CMakeLists.txt  main.c
appli/iotlab_tests/test_scanf_stack_usage/: CMakeLists.txt  README.md  scanf_stack_usage.c
appli/iotlab_tests/test_serial_flood/: CMakeLists.txt  serial_flood.c
appli/iotlab_tests/test_uids/: CMakeLists.txt  test_uids.c
appli/iotlab_tests/tests_pps_nico/: 12v2.txt  9v2.txt  CMakeLists.txt  analyze.sh  analyzePPS.py  analyzePPS.sh  computeCYCLESPERSEC.c  getTime.c  getTimeRadioRcv.c  getTimeRadioSnd.c  getTimeStats.c  pps-a8-11.txt  pps-a8-12.txt  pps-a8-9.txt  sendTimeA8.c
appli/iotlab_tests/zep_sniffer/: CMakeLists.txt  README.md  TODO  gps_synced_clock.c  send_absolute_time.py  serial2loopback.py  zep_sniffer.c  zep_sniffer.h
appli/sensbio/: CMakeLists.txt  README.md
appli/sensbio/banet/: CMakeLists.txt  README.md  banet_coord.c  banet_node.c
appli/sensbio/pedometer/: CMakeLists.txt  README.md  TODO.rst  activity.h  countstep.c  countstep.h  culbuto.c  culbuto.h  freefall.c  freefall.h  msg.h  pedometer.c  pedometer.h  pedometer_receive.c  pedometer_send.c
appli/sensbio/pedometer/doc/: INTERNALS.rst  Makefile  conf.py  fox_dongle.rst  fox_pedometer.rst  index.rst  internals.rst  test.py  todo.rst
appli/sensbio/pedometer/dongle/: .hikob.ini  fox_dongle.py  fox_pedometer.py
appli/sensbio/synchro_in/: CMakeLists.txt  synchro_in.c
appli/sensbio_examples/: CMakeLists.txt
appli/sensbio_examples/synchro_in/: CMakeLists.txt  synchro_in.c
appli/sensbio_examples/synchro_out/: CMakeLists.txt  synchro_out.c
drivers/: unique_id.h
lib/: CMakeLists.txt  packet.h
lib/event/: event.c
lib/fiteco/: fiteco_lib_gwt.c
lib/oml/: CMakeLists.txt  comm.c  comm.h  omlc.c  omlc.h  omlcore.c  omlcore.h  omlmp.c  omlmp.h
net/: CMakeLists.txt  mac_csma.h  mac_tdma.h
net/mac_csma/: CMakeLists.txt  mac_csma.c
periph/: n25xxx.h
(+45 files in other folders)
