if(${PLATFORM_HAS_PHY})
if(${PLATFORM_HAS_ISL29020})
if(${PLATFORM_HAS_LSM303DLHC})
if(${PLATFORM_HAS_L3G4200D})
if(${PLATFORM_HAS_LPS331AP})
    add_executable(robot_broadcaster robot_broadcaster radio)
    target_link_libraries(robot_broadcaster platform)
endif(${PLATFORM_HAS_LPS331AP})
endif(${PLATFORM_HAS_L3G4200D})
endif(${PLATFORM_HAS_LSM303DLHC})
endif(${PLATFORM_HAS_ISL29020})
endif(${PLATFORM_HAS_PHY})

if(${PLATFORM_HAS_PHY})
add_executable(robot_listener robot_listener radio)
target_link_libraries(robot_listener platform)
endif(${PLATFORM_HAS_PHY})
